# modified-angelcode

./: CMakeLists.txt  LICENSE  README.md
sdk/: CHANGES_FROM_STOCK.md  patch.md
sdk/add_on/datetime/: datetime.cpp  datetime.h
sdk/add_on/scriptany/: scriptany.cpp  scriptany.h
sdk/add_on/scriptarray/: scriptarray.cpp  scriptarray.h
sdk/add_on/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
sdk/add_on/scriptbuilder/builderinternals/: conditional_pass.hpp  decorator_pass.hpp  directive_pass.hpp  metadata_pass.hpp  scope_tracker.hpp  script_text.hpp  splice_pass.hpp  types.hpp
sdk/add_on/scriptdictionary/: scriptdictionary.cpp  scriptdictionary.h
sdk/add_on/scriptstdstring/: scriptstdstring.cpp
sdk/add_on/weakref/: weakref.cpp
sdk/angelscript/: PATCH_script_object_init_callback.md
sdk/angelscript/include/: angelscript.h
sdk/angelscript/source/: as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_callfunc.cpp  as_compiler.cpp  as_compiler.h  as_context.cpp  as_gc.cpp  as_generic.cpp  as_module.cpp  as_module.h  as_restore.cpp  as_restore.h  as_scriptengine.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptfunction.h  as_scriptobject.cpp  as_texts.h  as_typeinfo.cpp  as_typeinfo.h
sdk/samples/asrun/source/: main.cpp
sdk/samples/include/source/: main.cpp
sdk/samples/tutorial/source/: main.cpp
tests/: CMakeLists.txt  test_as_halting.cpp  test_as_halting_obvious.cpp
